# Peach

./: .gitignore  README
English/: README  adjectives.txt  adverbs.txt  arguments.txt  articles.txt  causes.txt  comparisons.txt  conjunctions.txt  etc.txt  feeling.txt  latin.txt  nb.txt  nouns.txt  numbers.txt  prepositions.txt  selection.txt  starts.txt  thank.txt  times.txt  today.txt  transcriptome.txt  verbs.txt
IMaLamarc/: README
IMaLamarc/data/: test-single-locus.seq  test-three-pop.seq  test-three-pop.xml  test-two-pop.seq  test.seq
IMaLamarc/noweb/: IMaLamarc.nw  im.menu  main.lyx
IMaLamarc/test/: infile-im-test.xml  infile-im.xml  infile.xml  test-three-pop.xml
PhyML-Analysis/: README
PhyML-Analysis/sh/: batch.sh  batchjob.sh  createjobidfile.sh  run.sh
arabidopsis/: README
bash/: README  array.sh
biopp/: run.sh
cedric/: cedric.lyx
circos/sol/: README  circos.conf  ideogram.conf
cv/: cv.lyx  statement-software-development.lyx  statement.lyx
dernaseq/: MyDocument.h  MyDocument.m  dernaseq_Prefix.pch  main.m
dernaseq/English.lproj/: MainMenu.xib
dernaseq/dernaseq.xcodeproj/: goshng.pbxuser  goshng.perspectivev3  project.pbxproj
documentation/: README
doyon/: README  REFERENCE  TODO
doyon/downloads/: README  run
format/: README
imr/: README  c
imr/conf/: README
imr/data/: outfile_1_2.imr
imr/doc/: Manual  README
imr/noweb/: imr.bib  imr.nw  run
imr/pl/: convert-fsc.pl  sub-fsc.pl
imr/sh/: choose-species.sh  conf.sh  convert-fsc-to-imr.sh  global-variable.sh  init-file-system.sh  run.sh  sim-fsc.sh  sim-imr.sh  sim1-fsc.sh  sim1-imr.sh  sim2-fsc.sh
imr/species/: README  sim1  sim2  sim3  sim4  sim5  sim6
imr/src/: CMakeLists.txt  c
imr/src/fsc/: fs.sh  launch_fs.sh  seed.txt
imr/src/galledtree/: Gall.pm  Methods.pm  README  Tree.pm  data  elaborate  elaborateout  example  exampleout  galledtree.pl  junk  multiGall.pm  multiMethods.pm  multiTree.pm  multicross.pl  multidata  softwaredisclaimer
kseq/: README  compile  sc-paired-end.c  sc-paired-end2.c  sc-paired-end3.c
lemming-analysis/: AUTHORS  README  THANKS
lemming-analysis/R/: README
lemming-analysis/data/: README
lemming-analysis/doc/: History  Manual  README
lemming-analysis/pl/: README  phyilp-part.pl
lemming-analysis/sh/: README  batch.sh  conf.sh  copyright.sh  global-variable.sh  main.sh  project.sh  run.sh  utility.sh
lemming-analysis/src/: README
math/: README  linearAlgebra.txt
msa/: README
notes/grants/: rnaseq-112311.txt
notes/lectures/: README  beamer-simple.lyx  bsa.lyx  thesispres.lyx
notes/proposals/: README
notes/researches/: siepel-transcript.lyx  siepel.lyx
notes/reviews/: challis-schmidler.txt
notes/talks/: 3cpg-talk-gene.txt  bill-cresko.txt  christopher-kyle.txt  jeffrey-peters.txt  jessie-young.txt  kevin-mccracken.txt  mary-kuhner.txt  matt-olson.txt
objc/: README  nothing.m
ortho-analysis/: README
paml-analysis/: README
paml-analysis/doc/: Manual
pan-analysis/: README
pascal/: README
perlbook/: README  array-count.pl  array-find-index.pl  array-set.pl  comparison.pl  hash-to-array.pl  integer.pl  string-add-space.pl  string-lowercase.pl
pgf/: INSTALL  Makefile  first.tex
pgf/tex/: 2-4.tex  2-5.tex  2-7.tex  ilmap.tex
psa/: README
rdev/: ChangeLog  README  get-r-devel  run  setup
rice/: README  c  now
rice/conf/: README
rice/data/: README
rice/doc/: Manual
rice/pl/: examine-ima2-data.pl  prior-file.pl  sub-fasta.pl  sub-ima2data.pl  sub-ima2prior.pl  summarize-sequence-data.pl
rice/sh/: choose-species.sh  conf.sh  examine-ima2-data.sh  global-variable.sh  ima2-prepare.sh  mkdir-species.sh  prepare-run-clonalframe.sh  prior-file.sh  run-ima2.sh  run.sh  summarize-sequence-data.sh
rice/species/: osativa
rice/src/ima2-4.11.11/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
rice/src/ima2-4.11.11/src/: Makefile.am  Makefile.in  autoc.c  build_gtree.c  build_poptree.c  calc_prob_data.c  freemem.c  ginfo.c  gtint.c  histograms.c  ima_main.c  imamp.h  initialize.c  jointfind.c  mcmcfile.c  multi_t_bins.c  output.c  popmig.c  readata.c  readpriorfile.c  surface_call_functions.c  surface_search_functions.c  swapchains.c  treeprint.c  update_gtree.c  update_gtree.h  update_gtree_common.c  update_gtree_common.h  update_mc_params.c  update_mc_params.h  update_t_NW.c  update_t_RY.c  updateassignment.c  updateassignment.h  utilities.c  utilities.h
rnaseq/: Info.plist  README  VTXDevelopment.rtf  defaults.h  download-packages.sh  install-packages.sh  installed.packages.txt  main.m  rnaseq_Prefix.pch  run.sh  x-with-deseq.tab  x.R  x.tab
rnaseq/DDVSources/: DDVDocument.h  DDVDocument.m  DDVLexItem.h  DDVLexItem.m  DDVLexiconController.h  DDVLexiconController.m  DDVLexiconModel.h  DDVLexiconModel.m  DDVPrefsController.h  DDVPrefsController.m  DDVQuizController.h  DDVQuizController.m  DDVQuizWindow.h  DDVQuizWindow.m  DDVSearchFieldFormatter.h  DDVSearchFieldFormatter.m  DDVToolbarDelegateCategory.h  DDVToolbarDelegateCategory.m  DDVTopic.h  DDVTopic.m  DDVTopicController.h  DDVTopicController.m  DDVTopicTableView.h  DDVTopicTableView.m  DDVWindowController.h  DDVWindowController.m  MMAppController.h  MMAppController.m  MMBezierPathCell.h  MMBezierPathCell.m  MMPasteboardCategory.h  MMPasteboardCategory.m  MMPrintView.h  MMPrintView.m  MMRandomEnumerator.h  MMRandomEnumerator.m
rnaseq/Embedding/: embeddedRCall.c
rnaseq/English.lproj/: Credits.html  (+2 more)
simpleopt/: README
simpleopt/src/: CMakeLists.txt  basicsample.c  fullsample.c  simpleglob.c  simpleglob.h  simpleopt.c  simpleopt.h
st2/: MbBitfield.h  MbRandom.mm  README  hungarian.mm  integer.mm  machineInfo.mm  mcmc.mm  partition.mm  samples.mm  st.h  st2.1  structurama.mm
tomato/: AUTHORS  INSTALL  Makefile  NEWS  README  THANKS  TODO  chr.conf  chr3.conf  circos.conf  tomato.Rnw
tomato/R/: t.R  (+19 more)
travels/: new_york.txt
tux/: .gitignore  AUTHORS  ChangeLog  INSTALL  README  THANKS  TODO  c  run
tux/test/cmake/s010/: CMakeLists.txt  bessel.cpp
tux/test/cmake/s011/: CMakeLists.txt
ucscgb/: README  run.sh
(+284 files in other folders)
