## Process this file with automake to produce Makefile.in

bin_PROGRAMS = IMa2 

IMa2_SOURCES = autoc.c build_gtree.c build_poptree.c calc_prob_data.c freemem.c ginfo.c gtint.c histograms.c ima_main.c imamp.h initialize.c jointfind.c Makefile.am mcmcfile.c multi_t_bins.c output.c popmig.c readata.c readpriorfile.c surface_call_functions.c surface_search_functions.c swapchains.c treeprint.c updateassignment.c updateassignment.h update_gtree.c update_gtree_common.c update_gtree_common.h update_gtree.h update_mc_params.c update_mc_params.h update_t_NW.c update_t_RY.c utilities.c utilities.h xtrapbits.h

IMa2_LDADD = -lm

EXTRA_DIST = msdirent.c msdirent.h
